# 1inch-rs

./:  LICENSE  .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: README.md  allowance.rs  approve.rs  info.rs  prices.rs  quote.rs  swap.rs
src/: client.rs  consts.rs  lib.rs
src/approve/: allowance.rs  approve.rs  mod.rs  spender.rs  types.rs
src/common/: token.rs
src/swap/: liquidity_pools.rs  mod.rs  quote.rs  swap.rs  tokens_list.rs  types.rs
src/swap/approve/: allowance.rs  approve.rs  mod.rs  spender.rs  types.rs
src/tokens/: currencies.rs  mod.rs  tokens_price.rs
src/utils/: builder.rs  mod.rs  params.rs
