[package]
name = "one_inch"
version = "0.0.1"
authors = ["Rosenthall <rosenthall@riseup.net>"]
description = "Rusty API wrapper for the 1inch"
license = "BSD-3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "allowance"
path = "examples/allowance.rs"

[[example]]
name = "approve"
path = "examples/approve.rs"

[[example]]
name = "info"
path = "examples/info.rs"

[[example]]
name = "swap"
path = "examples/swap.rs"

[[example]]
name = "quote"
path = "examples/quote.rs"

[[example]]
name = "prices"
path = "examples/prices.rs"




[dependencies]
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4.4"
reqwest = { version = "0.11.22", features = ["json"] }
strum_macros = "0.25.3"
